force-app/main/default/objects/Request_Keiri__c/fields/Transfer_request_return__c.field-meta.xml
<CustomField>
    <fullName>Transfer_request_return__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>差戻</label>
    <type>Checkbox</type>
</CustomField>