force-app/main/default/objects/Request_Keiri__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>振込日（営業→経理）</label>
    <type>Date</type>
</CustomField>