force-app/main/default/objects/Request_Keiri__c/fields/Two_business_days__c.field-meta.xml
<CustomField>
    <fullName>Two_business_days__c</fullName>
    <label>2営業日後</label>
    <type>Date</type>
</CustomField>