force-app/main/default/objects/Request_Keiri__c/fields/Unsupported__c.field-meta.xml
<CustomField>
    <fullName>Unsupported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>承認期限超過</label>
    <type>Checkbox</type>
</CustomField>