force-app/main/default/objects/Request_Keiri__c/fields/URL_AdditionalImage__c.field-meta.xml
<CustomField>
    <fullName>URL_AdditionalImage__c</fullName>
    <description>山本</description>
    <label>追加画像用URL</label>
    <type>Url</type>
</CustomField>