force-app/main/default/objects/Request_Keiri__c/fields/Way_of_depositing__c.field-meta.xml
<CustomField>
    <fullName>Way_of_depositing__c</fullName>
    <description>山本</description>
    <label>入金方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現金​</fullName>
            </value>
            <value>
                <fullName>振込​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>