force-app/main/default/objects/Request_Keiri__c/validationRules/bank_account_nm_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>bank_account_nm_Rule</fullName>
    <active>true</active>
    <description>カンマ追加。与儀
山本</description>
    <errorConditionFormula>NOT(REGEX(bank_account_nm__c, &quot;^[ｦ-ﾟA-Z0-9\\-\\.\\)\\( /,]*$&quot;)) || 
REGEX(bank_account_nm__c, &quot;.*[ｧｨｩｪｫｯｬｭｮ].*&quot;)</errorConditionFormula>
    <errorMessage>口座名義は半角ｶﾀｶﾅ（大文字）、英大文字、数字、および記号（ . , - ( ) / ）のみ入力可能です。半角ｶﾀｶﾅの小文字は入力できません。</errorMessage>
</ValidationRule>