force-app/main/default/objects/Request_Keiri__c/validationRules/branch_nm_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>branch_nm_Rule</fullName>
    <active>true</active>
    <description>山本</description>
    <errorConditionFormula>REGEX(branch_nm__c, &quot;.*[0-9].*&quot;)</errorConditionFormula>
    <errorMessage>支店名に半角数字を入力することはできません。</errorMessage>
</ValidationRule>