force-app/main/default/objects/Request_Keiri__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PO_Owner__c</columns>
    <columns>ModelYear__c</columns>
    <columns>CarName__c</columns>
    <columns>Chassis_number__c</columns>
    <columns>Lot_number__c</columns>
    <columns>Request_Content_Keiri__c</columns>
    <columns>Request_to_Accounting_Remarks__c</columns>
    <columns>Keiri_completion_day__c</columns>
    <columns>Inquiry_Content_Keiri__c</columns>
    <columns>Others_Keiri__c</columns>
    <columns>Inquiry_Completion_date_Keiri__c</columns>
    <columns>Transfer_request_approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>