force-app/main/default/objects/Request_Keiri__c/listViews/Crate1.listView-meta.xml
<ListView>
    <fullName>Crate1</fullName>
    <columns>NAME</columns>
    <columns>Request_Content_Keiri__c</columns>
    <columns>Lot_number__c</columns>
    <columns>CarName__c</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>Request_to_Accounting_Remarks__c</columns>
    <columns>Transfer_request_approved__c</columns>
    <columns>Keiri_Manager__c</columns>
    <columns>Memo__c</columns>
    <columns>Keiri_completion_day__c</columns>
    <columns>Inquiry_Completion_date_Keiri__c</columns>
    <columns>department_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Content_Keiri__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Keiri_completion_day__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>【完了済み】営業→経理</label>
</ListView>