force-app/main/default/objects/Request_Keiri__c/listViews/Crate2.listView-meta.xml
<ListView>
    <fullName>Crate2</fullName>
    <columns>NAME</columns>
    <columns>Lot_number__c</columns>
    <columns>CarName__c</columns>
    <columns>Keiri_Sales__c</columns>
    <columns>Inquiry_Content_Keiri__c</columns>
    <columns>Others_Keiri__c</columns>
    <columns>Approva_repairCosts__c</columns>
    <columns>Keiri_Manager__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inquiry_Content_Keiri__c</field>
        <operation>equals</operation>
        <value>修理代の承認,FBの不備​,その他</value>
    </filters>
    <filters>
        <field>Inquiry_Completion_date_Keiri__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>【完了済み】経理→営業</label>
</ListView>