force-app/main/default/objects/Request_Keiri__c/listViews/Crate4.listView-meta.xml
<ListView>
    <fullName>Crate4</fullName>
    <columns>NAME</columns>
    <columns>Lot_number__c</columns>
    <columns>CarName__c</columns>
    <columns>Keiri_Sales__c</columns>
    <columns>PO_Owner__c</columns>
    <columns>Authorizer__c</columns>
    <columns>Inquiry_Content_Keiri__c</columns>
    <columns>FB__c</columns>
    <columns>ScheduledTransferDate_A__c</columns>
    <columns>Others_Keiri__c</columns>
    <columns>Approva_repairCosts__c</columns>
    <columns>Keiri_Manager__c</columns>
    <columns>Memo__c</columns>
    <columns>PaymentProcessingCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inquiry_Content_Keiri__c</field>
        <operation>equals</operation>
        <value>修理代の承認,FBの不備​,その他</value>
    </filters>
    <filters>
        <field>Inquiry_Completion_date_Keiri__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Others_Keiri__c</field>
        <operation>notContain</operation>
        <value>テスト</value>
    </filters>
    <filters>
        <field>System_FinalDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CancelDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>経理→営業</label>
</ListView>