force-app/main/default/objects/Request_Keiri__c/listViews/manager_Approval.listView-meta.xml
<ListView>
    <fullName>manager_Approval</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6) AND 7 AND 8</booleanFilter>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>Lot_number__c</columns>
    <columns>ModelYearCarNameState__c</columns>
    <columns>Transfer_money_A__c</columns>
    <columns>Payee_A__c</columns>
    <columns>ScheduledTransferDate_A__c</columns>
    <columns>ScheduledPickupDate__c</columns>
    <columns>DocumentOKCheck__c</columns>
    <columns>PO_Owner__c</columns>
    <columns>Transfer_request_approved__c</columns>
    <columns>Transfer_request_return__c</columns>
    <columns>Transfer_Count__c</columns>
    <columns>Transfer_on_the_day__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Content_Keiri__c</field>
        <operation>equals</operation>
        <value>振込依頼</value>
    </filters>
    <filters>
        <field>Transfer_request_approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PaymentProcessingCategory__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>keiri_FinalDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Two_business_days_before__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ScheduledTransferDate_A__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>department_name__c</field>
        <operation>contains</operation>
        <value>支店</value>
    </filters>
    <filters>
        <field>CancelDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>※コピーして自支店分を作成してください　支店長承認用</label>
</ListView>